# OrderSync

./: .gitignore  Cargo.toml  Dockerfile  docker-compose.yml
src/: appdata.rs  database.rs  environment.rs  main.rs
src/auth/: mod.rs  wix_access_token.rs
src/endpoints/: mod.rs
src/endpoints/wix/: get_grant.rs  get_install.rs  mod.rs
src/endpoints/wix/webhooks/: mod.rs  post_order_created.rs
src/threads/: mod.rs  wix_fetch_orders.rs
src/types/: wix.rs
templates/wix/: grant.html  install.html
