[package]
name = "ordersync"
version = "0.0.1"
authors = ["TheDutchMC04 <tobias64a@gmail.com>"]
edition = "2018"

[dependencies]
actix-web = "3"
actix-files = "0.5.0"
serde = { version = "1.0.123", features = ["derive"] }
serde_json = "1.0.64"
futures = "0.3.13"
reqwest = { version = "0.11.1", features = ["json", "blocking"] }
base64 = "0.13.0"
mysql = "20.1.0"
rand = "0.8.3"
tera = "1.6.1"
qstring = "0.7.2"
alcoholic_jwt = "1.0.0"
chrono = "0.4.19"
